# fastapi-websocket-chat

./: .gitignore  architecture.systemizer.json  docker-compose.yml  readme.md
backend/: Dockerfile  Pipfile  config.py  connections.py  events.py  main.py  makefile  pyproject.toml  requirements.txt
client/: Dockerfile  index.html  index.js  style.css
haproxy/: haproxy.cfg
