[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Naufal Afif <naufalafif58@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
websockets = "^9.1"
wsproto = "^1.0.0"
redis = "^3.5.3"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
